fixing sidebar menu spacing

--- a/src/styles/components/sidebar.less
+++ b/src/styles/components/sidebar.less
@@ -39,8 +39,12 @@
       }
 
       &--indented {
-        padding-left: 42px;
+        padding: 10px 42px;
         font-size: 0.95rem;
+
+        &:last-child {
+          margin-bottom: 6px;
+        }
       }
 
       &--without-effects {
